--- a/Assets/homepage.html
+++ b/Assets/homepage.html
@@ -18,46 +18,20 @@
         <a href="#">Sign In</a>
     </nav>
 
-    <section class="genre-section" id="comedy">
-        <h2>Comedy</h2>
-        <div class="movies-list">
-            <div class="movie-card">
-                <div class="movie-info">
-                    <img src="comedy_movie_poster.jpg" alt="Comedy Movie Poster">
-                    <h3>Movie Title</h3>
-                    <p>Release Year: 2022</p>
-                    <p>Genre: Comedy</p>
-                    <button class="favorite-btn">Add to Favorites</button>
-                </div>
+    <body>
+        <div class="container">
+    
+            <div class="genre-buttons">
+                <a class="genre-button" href="Action.html">Action</a>
+                <a class="genre-button" href="Comedy.html">Comedy</a>
+                <a class="genre-button" href="Drama.html">Drama</a>
+                <a class="genre-button" href="Sci-Fi.html">Sci-Fi</a>
+                <a class="genre-button" href="Thriller.html">Thriller</a>
+                <a class="genre-button" href="Romance.html">Romance</a>
+               
             </div>
-
-    <section class="genre-section" id="thriller">
-        <h2>Thriller</h2>
-        <div class="movies-list">
-            <!-- Thriller Movie Cards go here -->
         </div>
-    </section>
-
-    <section class="genre-section" id="romance">
-        <h2>Romance</h2>
-        <div class="movies-list">
-            <!-- Romance Movie Cards go here -->
-        </div>
-    </section>
-
-    <section class="genre-section" id="drama">
-        <h2>Drama</h2>
-        <div class="movies-list">
-            <!-- Drama Movie Cards go here -->
-        </div>
-    </section>
-
-    <section class="genre-section" id="action">
-        <h2>Action</h2>
-        <div class="movies-list">
-            <!-- Action Movie Cards go here -->
-        </div>
-    </section>
+    </body>
 
     <script>
         // You can add JavaScript code here for handling user interactions and favorites.
