--- a/Assets/homepage.html
+++ b/Assets/homepage.html
@@ -25,6 +25,7 @@
                 <a class="genre-button" href="Action.html">Action</a>
                 <a class="genre-button" href="Comedy.html">Comedy</a>
                 <a class="genre-button" href="Drama.html">Drama</a>
+                <a class="genre-button" href="Drama.html">Drama</a>
                 <a class="genre-button" href="Sci-Fi.html">Sci-Fi</a>
                 <a class="genre-button" href="Thriller.html">Thriller</a>
                 <a class="genre-button" href="Romance.html">Romance</a>
@@ -34,7 +35,7 @@
     </body>
 
     <script>
-        // You can add JavaScript code here for handling user interactions and favorites.
+      
     </script>
 
 </body>
